--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.21",
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@ngrx/component-store": "^18.1.1",
     "@ngrx/effects": "^18.1.1",
     "@ngrx/entity": "^18.1.1",
